syntax = "proto3";

package xyz.block.ftl.v1.provisioner;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/TBD54566975/ftl/backend/protos/xyz/block/ftl/v1/provisioner;provisioner";
option java_multiple_files = true;

message PingRequest {}
message PingResponse {
  optional string not_ready = 1;
}

service ProvisionerService {
  rpc Ping(PingRequest) returns (PingResponse);
}
